force-app/main/default/objects/ucinn_ascendv2__Stock_Payment__c/ucinn_ascendv2__Stock_Payment__c.object-meta.xml
<CustomObject>
    <description>The junction object which looks up both giving history and stock, in order to, under the same payment, display stock information in each giving history instead of only tying stock into the last giving history of the payment.</description>
    <label>Stock Payment</label>
    <nameField>
        <label>Stock Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stock Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>