force-app/main/default/objects/ucinn_ascendv2__Stock_Payment__c/fields/ucinn_ascendv2__Company_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Company_Name__c</fullName>
    <formula>ucinn_ascendv2__Stock__r.ucinn_ascendv2__Company_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>