force-app/main/default/objects/ucinn_ascendv2__Stock_Payment__c/fields/ucinn_ascendv2__Low_Value_On_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Low_Value_On_Date_Formula__c</fullName>
    <formula>ucinn_ascendv2__Stock__r.ucinn_ascendv2__Low_Value_on_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Low Value On Date</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>