force-app/main/default/objects/ucinn_ascendv2__Stock_Payment__c/fields/ucinn_ascendv2__Number_of_Shares_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Number_of_Shares_Formula__c</fullName>
    <formula>(ucinn_ascendv2__Payment_Amount_Formula__c  /    ucinn_ascendv2__Stock__r.ucinn_ascendv2__Payment_Amount__c) *  ucinn_ascendv2__Stock__r.ucinn_ascendv2__Number_of_Shares__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Shares</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>