force-app/main/default/objects/ucinn_ascendv2__Stock_Payment__c/fields/ucinn_ascendv2__Payment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A look-up field of giving history so stock payment can be shown under giving history standard layout page.</description>
    <label>Payment</label>
    <referenceTo>ucinn_ascendv2__Payment__c</referenceTo>
    <relationshipLabel>Stock Payments</relationshipLabel>
    <relationshipName>Stock_Payments_Payment</relationshipName>
    <type>Lookup</type>
</CustomField>