force-app/main/default/objects/ucinn_ascendv2__Stock_Payment__c/fields/ucinn_ascendv2__Payment_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payment_Amount_Formula__c</fullName>
    <formula>(( IF(ISPICKVAL($CustomMetadata.ucinn_ascendv2__Gift_Processing_Setting__mdt.ucinn_ascendv2__Gift_Processing_Setting.ucinn_ascendv2__Payment_Method__c, &quot;Gift Amount&quot;), ucinn_ascendv2__Payment__r.ucinn_ascendv2__Payment_Amount__c +  ucinn_ascendv2__Payment__r.ucinn_ascendv2__Non_Gift_Amount__c, ucinn_ascendv2__Payment__r.ucinn_ascendv2__Payment_Amount__c))  / ucinn_ascendv2__Payment__r.ucinn_ascendv2__Total_Payment__c) *   ucinn_ascendv2__Stock__r.ucinn_ascendv2__Payment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>