force-app/main/default/objects/ucinn_ascendv2__Stock_Payment__c/fields/ucinn_ascendv2__Payment_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payment_Group_ID__c</fullName>
    <description>payment ID for giving history.</description>
    <label>Payment Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>