force-app/main/default/objects/ucinn_ascendv2__Stock_Payment__c/fields/ucinn_ascendv2__Stock__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A look-up field of stock which can link stock information.</description>
    <label>Stock</label>
    <referenceTo>ucinn_ascendv2__Stock__c</referenceTo>
    <relationshipLabel>Stock Payments</relationshipLabel>
    <relationshipName>Stock_Payments_Stock</relationshipName>
    <type>Lookup</type>
</CustomField>