force-app/main/default/objects/ucinn_ascendv2__Stock_Payment__c/fields/ucinn_ascendv2__Stock_Payment_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Stock_Payment_Name_Auto_Number__c</fullName>
    <displayFormat>SP-{0000000}</displayFormat>
    <label>Stock Payment Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>