force-app/main/default/objects/ucinn_ascendv2__Stock_Payment__c/fields/ucinn_ascendv2__Ticker_Symbol_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Ticker_Symbol_Formula__c</fullName>
    <formula>ucinn_ascendv2__Stock__r.ucinn_ascendv2__Ticker_Symbol__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticker Symbol</label>
    <type>Text</type>
</CustomField>